# kuroko-ops

./: .auto-claude-security.json  .env.example  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  PLAN.md  README.md  async_test_fail.txt  build_all_modules.py  build_modules.py  create_handler_modules.py  docker-compose.yml  extract_handlers.py  package.json  pyproject.toml  split_handlers.sh  test_output.txt
apps/backend/: Dockerfile  init.py  main.py  requirements.txt
apps/frontend/: package.json
auto-build/: context.py  spec_runner.py
auto-claude/: .env.example  agent.py  analyzer.py  client.py  context.py  coordinator.py  critique.py  debug.py  graphiti_config.py  graphiti_memory.py  ideation_runner.py  implementation_plan.py  linear_config.py  linear_integration.py  linear_updater.py  memory.py  planner.py  prediction.py  progress.py  project_analyzer.py  prompt_generator.py  prompts.py  qa_loop.py  recovery.py  review.py  roadmap_runner.py  run.py  scan_secrets.py  security.py  service_context.py  spec_runner.py  statusline.py  test_fixed.json  ui.py  validate_spec.py  workspace.py  worktree.py
auto-claude-ui/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
auto-claude-ui/e2e/: flows.e2e.ts
auto-claude/agents/: __init__.py  base.py  coder.py  memory.py  planner.py  session.py  test_refactoring.py  utils.py
auto-claude/analyzers/: __init__.py  base.py  context_analyzer.py  database_detector.py  (+5 more)
tests/: conftest.py  test_auth_new.py  test_graphiti.py  test_llm_client.py  test_parallel.py  test_worktree.py
(+235 files in other folders)
