[project]
name = "kuroko-ops"
version = "0.1.0"
description = "Multi-LLM agentic framework, Docker-first"
authors = [
    {name = "Kuroko Team", email = "gabriel@kuroko-ops.work"},
]
dependencies = [
    "openai>=1.40",
    "litellm>=1.40",
    "pydantic>=2.0",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.20",
    "fastapi",
    "uvicorn",
    "websockets",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
